2025-12-11T01:01:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20118398669 # 835
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 415 589 / 418 592
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 419 593
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-10]

2025-12-10T01:01:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20083663804 # 834
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-10
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 414 588 / 415 589
* notice: next accum: outdated-unq outdated-all / unq all: 415 589 / 418 592
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2025-11-18] / [2025-12-09]

2025-12-02T00:59:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19842925973 # 826
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 413 587 / 415 589
* notice: next accum: outdated-unq outdated-all / unq all: 414 588 / 415 589
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-17] / []

2025-11-23T01:06:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19603745185 # 817