@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-11T01:01:58Z",
+  "timestamp" : "2025-12-13T00:58:10Z",
   "count_outdated" : 589,
   "uniques_outdated" : 415,
-  "count" : 593,
-  "uniques" : 419,
+  "count" : 594,
+  "uniques" : 420,
   "clones" : [
     {
       "timestamp": "2025-12-09T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-12-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
